REG-170 fix accessibility page alignment

--- a/src/encoded/static/scss/encoded/modules/_regulome_search.scss
+++ b/src/encoded/static/scss/encoded/modules/_regulome_search.scss
@@ -1143,6 +1143,11 @@ button {
 }
 
 .biosample-table {
+    max-width: 1000px;
+    margin: auto;
+}
+
+.biosample-table {
     display: none;
     &.display-table {
         display: block;
